Motorola-CM-Dashboard/logs/app.log
2019-01-31T09:26:14.032Z [Info] error: syntax error at or near "ebs_contracts_state_master"
2019-01-31T09:31:55.682Z [Info] error: uncaughtException: Cannot find module '../db_configuration/db_operations'
Error: Cannot find module '../db_configuration/db_operations'
    at Function.Module._resolveFilename (module.js:547:15)
    at Function.Module._load (module.js:474:25)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (D:\Projects\Github\Motorola_CM_Dashboard\Motorola-CM-Dashboard\rest_services\lookup.js:3:14)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
2019-01-31T09:49:54.677Z [Info] error: uncaughtException: Unexpected token export
D:\Projects\Github\Motorola_CM_Dashboard\Motorola-CM-Dashboard\app_configuration\response.js:1
(function (exports, require, module, __filename, __dirname) { export const  response = {
                                                              ^^^^^^

SyntaxError: Unexpected token export
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:616:28)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (D:\Projects\Github\Motorola_CM_Dashboard\Motorola-CM-Dashboard\rest_services\lookup.js:4:16)
2019-02-27T12:17:52.330Z [Info] error: uncaughtException: listen EADDRINUSE: address already in use :::4000
Error: listen EADDRINUSE: address already in use :::4000
    at Server.setupListenHandle [as _listen2] (net.js:1290:14)
    at listenInCluster (net.js:1338:12)
    at Server.listen (net.js:1425:7)
    at Object.<anonymous> (C:\Users\khush\OneDrive\Documents\Motorola_CM_Dashboard\Motorola-CM-Dashboard\app.js:71:8)
    at Module._compile (internal/modules/cjs/loader.js:689:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:700:10)
    at Module.load (internal/modules/cjs/loader.js:599:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:538:12)
    at Function.Module._load (internal/modules/cjs/loader.js:530:3)
    at Function.Module.runMain (internal/modules/cjs/loader.js:742:12)
2019-03-27T08:47:16.377Z [Info] error: uncaughtException: read ECONNRESET
Error: read ECONNRESET
    at _errnoException (util.js:992:11)
    at TCP.onread (net.js:618:25)
2019-03-27T08:47:16.493Z [Info] error: uncaughtException: read ECONNRESET
Error: read ECONNRESET
    at _errnoException (util.js:992:11)
    at TCP.onread (net.js:618:25)
2019-03-27T08:47:16.528Z [Info] error: uncaughtException: read ECONNRESET
Error: read ECONNRESET
    at _errnoException (util.js:992:11)
    at TCP.onread (net.js:618:25)
2019-03-27T08:47:16.582Z [Info] error: uncaughtException: read ECONNRESET
Error: read ECONNRESET
    at _errnoException (util.js:992:11)
    at TCP.onread (net.js:618:25)
2019-03-27T08:47:16.630Z [Info] error: uncaughtException: read ECONNRESET
Error: read ECONNRESET
    at _errnoException (util.js:992:11)
    at TCP.onread (net.js:618:25)
2019-03-27T08:47:16.674Z [Info] error: uncaughtException: read ECONNRESET
Error: read ECONNRESET
    at _errnoException (util.js:992:11)
    at TCP.onread (net.js:618:25)
2019-03-27T08:47:16.726Z [Info] error: uncaughtException: read ECONNRESET
Error: read ECONNRESET
    at _errnoException (util.js:992:11)
    at TCP.onread (net.js:618:25)
2019-03-27T08:47:16.761Z [Info] error: uncaughtException: read ECONNRESET
Error: read ECONNRESET
    at _errnoException (util.js:992:11)
    at TCP.onread (net.js:618:25)
2019-03-27T08:47:16.803Z [Info] error: uncaughtException: read ECONNRESET
Error: read ECONNRESET
    at _errnoException (util.js:992:11)
    at TCP.onread (net.js:618:25)
2019-03-27T08:47:16.895Z [Info] error: uncaughtException: read ECONNRESET
Error: read ECONNRESET
    at _errnoException (util.js:992:11)
    at TCP.onread (net.js:618:25)
